# wrap

./: Cargo.toml  README.md  gnu.txt
.github/workflows/: clippy.yml  fmt.yml
src/: lib.rs  main.rs
test/: test_case.txt  wrapped.txt
