[package]
name = "wrap"
version = "1.0.0"
edition = "2018"
description = "A small utility to wrap text using newlines"
license = "LGPL-3.0-or-later"
repository = "https://github.com/nearlySplat/wrap"
homepage = "https://github.com/nearlySplat/wrap#readme"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
